--- a/css/aurora.css
+++ b/css/aurora.css
@@ -5,7 +5,7 @@ body{
     line-height: 30px;
 }
 header{
-    background-color:#d14635;
+    background-color: #0066cc;
     text-align: center;
     padding-top: 50px;
     padding-bottom: 50px;
@@ -21,13 +21,12 @@ header h1 {
 header img{
     border-radius: 170px;
     width: 300px;
-    border: 20px solid white;
+    border: 20px solid #ff6600;
 }
 main{
    max-width: 1080px;
    margin: 0 auto;
    padding: 20px;
-   background-image: url("img/deep_space_starfield_with_a_blue_tint.webp");
 }
 main img{
     max-width: 100%;
