--- a/css/aurora.css
+++ b/css/aurora.css
@@ -44,7 +44,7 @@ a:hover{
     background-color:#483a94
 }
 footer{
-    background-color:#d14635;
+    background-color:#0066cc;
     text-align: center;
     color: white;
     padding: 50px;
